[gd_scene load_steps=3 format=3 uid="uid://bjb4u5ep23k3d"]

[ext_resource type="Theme" uid="uid://vjje68o054kl" path="res://menus/button.tres" id="1_02gx1"]
[ext_resource type="Script" path="res://menus/pause.gd" id="1_5x4ob"]

[node name="Pause" type="Control"]
process_mode = 2
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5x4ob")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = 2.0
offset_right = 261.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_02gx1")
text = "Continue"
flat = true

[node name="OptionsButton" type="Button" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_02gx1")
text = "controls"
flat = true

[node name="MenuButton" type="Button" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_02gx1")
text = "Return to main menu"
flat = true

[node name="QuitButton" type="Button" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_02gx1")
text = "Quit"
flat = true

[node name="GameIsPausedText" type="RichTextLabel" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_top = 216.0
offset_right = 225.0
offset_bottom = 281.0
grow_horizontal = 2
theme = ExtResource("1_02gx1")
text = "The game is paused"
fit_content = true
autowrap_mode = 0

[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
